--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.8.3
   share_plus: ^10.1.4
+  intl: ^0.20.2
+  image_picker: ^1.1.2
+
 
 dev_dependencies:
   flutter_test:
