--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   intl: ^0.20.2
   image_picker: ^1.1.2
   http: ^1.3.0
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.3.0
+  font_awesome_flutter: ^10.8.0
+  cloud_firestore: ^5.6.6
+
 
 
 dev_dependencies:
